[gd_scene load_steps=6 format=2]

[ext_resource path="res://card.gd" type="Script" id=1]
[ext_resource path="res://suit_clubs.png" type="Texture" id=2]
[ext_resource path="res://Rajdhani-Bold.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 100
use_filter = true
font_data = ExtResource( 3 )

[node name="Card" type="Control"]
margin_right = 150.0
margin_bottom = 210.0
mouse_default_cursor_shape = 2
script = ExtResource( 1 )

[node name="CardOuter" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 2
color = Color( 0, 0, 0, 1 )

[node name="CardInner" type="ColorRect" parent="CardOuter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -73.0
margin_top = -103.0
margin_right = 73.0
margin_bottom = 103.0
mouse_filter = 2

[node name="Value" type="Label" parent="CardOuter/CardInner"]
margin_right = 32.0
margin_bottom = 32.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
valign = 1

[node name="Value2" type="Label" parent="CardOuter/CardInner"]
margin_left = 150.0
margin_top = 210.0
margin_right = 182.0
margin_bottom = 242.0
rect_rotation = 180.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 1 )
text = "10"
align = 1
valign = 1

[node name="Suit" type="TextureRect" parent="CardOuter/CardInner"]
margin_left = 28.0
margin_top = 2.0
margin_right = 48.0
margin_bottom = 30.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 2
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Suit2" type="TextureRect" parent="CardOuter/CardInner"]
margin_left = 102.0
margin_top = 180.0
margin_right = 122.0
margin_bottom = 208.0
rect_min_size = Vector2( 20, 20 )
size_flags_horizontal = 10
size_flags_vertical = 7
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
flip_v = true

[node name="Value3" type="Label" parent="CardOuter/CardInner"]
margin_left = 2.0
margin_top = 40.0
margin_right = 146.0
margin_bottom = 168.0
rect_min_size = Vector2( 32, 32 )
custom_fonts/font = SubResource( 2 )
text = "10"
align = 1
valign = 1

[node name="Back" type="ColorRect" parent="CardOuter/CardInner"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.376471, 0.6, 0.945098, 1 )

[connection signal="gui_input" from="." to="." method="_on_Card_gui_input"]
